# event-logger

./: Cargo.toml
src/: constants.rs  eventlog_utils.rs  main.rs  models.rs  registry_utils.rs
